--- a/.github/workflows/Immortalwrt.yml
+++ b/.github/workflows/Immortalwrt.yml
@@ -164,12 +164,12 @@ jobs:
       uses: emon100/Action-Serverchan@v3
       with:
         SCKEY: ${{ secrets.WEIXIN_SCKEY }}
-        key: ${{ secrets.WEIXIN_SCKEY }}
+        # key: ${{ secrets.WEIXIN_SCKEY }}
         text: 开始编译【${{matrix.target}}】
         desp: 🎉 主人💕：您的编译脚本成功触发【${{matrix.target}}】文件夹编译【${{ env.SOURCE_CODE }}】【${{ env.FOLDER_NAME }}】【${{ env.CONFIG_FILE }}】分支的${{env.TARGET_PROFILE}}固件中,请耐心等待......
 
           😋【${{env.WAREHOUSE_MAN}}】仓库的【${{env.RUN_NUMBER}}号】
 
-          🎈 触发时间：$(date +%Y年%m月%d号%H时%M分
+          🎈 触发时间：${{ format('{0:yyyy年MM月dd号HH时mm分}', github.event.head_commit.timestamp) }}
 
           🌴 固件编译已触发 🎈！！！
