--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -121,16 +121,21 @@ jobs:
       if: steps.compile.outcome == 'success'
       uses: 281677160/common@uploads
 
+ # 先添加一个步骤获取完成时间
+    - name: 记录完成时间
+      run: |
+        echo "FINISH_TIME=$(date +'%Y年%m月%d号%H时%M分')" >> $GITHUB_ENV
+  # 这个步骤会将当前时间写入环境变量 FINISH_TIME
+
     - name: 完成编译通知
       uses: emon100/Action-Serverchan@v3
       with:
         SCKEY: ${{ secrets.WEIXIN_SCKEY }}
-        key: ${{ secrets.WEIXIN_SCKEY }}
         text: 完成编译【${{matrix.target}}】
         desp: 🎉 主人💕：完成编译【${{matrix.target}}】文件夹编译【${{ env.SOURCE_CODE }}】【${{ env.FOLDER_NAME }}】【${{ env.CONFIG_FILE }}】分支的${{env.TARGET_PROFILE}}固件
 
           😋【${{env.WAREHOUSE_MAN}}】仓库的【${{env.RUN_NUMBER}}号】
 
-          🎈 完成时间：$(date +%Y年%m月%d号%H时%M分
+          🎈 完成时间：${{ env.FINISH_TIME }} 
 
           🌴 固件编译已完成 🎈！！！
