--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -127,15 +127,31 @@ jobs:
         echo "FINISH_TIME=$(date +'%Y年%m月%d号%H时%M分')" >> $GITHUB_ENV
   # 这个步骤会将当前时间写入环境变量 FINISH_TIME
 
-    - name: 完成编译通知
+# 编译成功通知（仅当编译步骤成功时触发）
+    - name: 编译成功通知
+      if: success() && steps.compile.outcome == 'success'
       uses: emon100/Action-Serverchan@v3
       with:
-        SCKEY: ${{ secrets.WEIXIN_SCKEY }}
-        text: 完成编译【${{matrix.target}}】
-        desp: 🎉 主人💕：完成编译【${{matrix.target}}】文件夹编译【${{ env.SOURCE_CODE }}】【${{ env.FOLDER_NAME }}】【${{ env.CONFIG_FILE }}】分支的${{env.TARGET_PROFILE}}固件
+         SCKEY: ${{ secrets.WEIXIN_SCKEY }}
+         text: 编译成功【${{matrix.target}}】
+         desp: 🎉 主人💕：【${{matrix.target}}】文件夹编译成功！
+    
+           📦 编译目标：【${{ env.SOURCE_CODE }}】【${{ env.FOLDER_NAME }}】【${{ env.CONFIG_FILE }}】分支的${{env.TARGET_PROFILE}}固件
+           😋 仓库信息：【${{env.WAREHOUSE_MAN}}】仓库的【${{env.RUN_NUMBER}}号】
+           🎈 完成时间：${{ env.FINISH_TIME }}
+           🌴 固件编译已完成 🎈！！！
 
-          😋【${{env.WAREHOUSE_MAN}}】仓库的【${{env.RUN_NUMBER}}号】
-
-          🎈 完成时间：${{ env.FINISH_TIME }} 
-
-          🌴 固件编译已完成 🎈！！！
+# 编译失败通知（仅当编译步骤失败时触发）
+    - name: 编译失败通知
+      if: failure() && steps.compile.outcome == 'failure'
+      uses: emon100/Action-Serverchan@v3
+      with:
+         SCKEY: ${{ secrets.WEIXIN_SCKEY }}
+         text: 编译失败【${{matrix.target}}】
+         desp: 🚨 主人💕：【${{matrix.target}}】文件夹编译失败！
+    
+           ❌ 失败目标：【${{ env.SOURCE_CODE }}】【${{ env.FOLDER_NAME }}】【${{ env.CONFIG_FILE }}】分支的${{env.TARGET_PROFILE}}固件
+           😋 仓库信息：【${{env.WAREHOUSE_MAN}}】仓库的【${{env.RUN_NUMBER}}号】
+           🎈 失败时间：${{ env.FINISH_TIME }}
+           🔗 查看详情：${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+           🌴 请及时排查问题 🚨！！！
