--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -33,11 +33,6 @@ jobs:
        target: [Immortalwrt]
 
     steps:
-    # 在编译步骤前记录开始时间
-    - name: 记录开始时间
-      run: |
-        echo "START_TIME=$(date +%s)" >> $GITHUB_ENV
-        
     - name: 释放Ubuntu磁盘空间
       uses: danshui-git/free-disk-space@main
       with:
@@ -65,6 +60,12 @@ jobs:
         sudo mkdir -p /${{ env.DIY_WORK }}
         sudo chown ${USER}:${GROUPS} /${{ env.DIY_WORK }}
 
+    # 1. 编译开始前立即记录时间（紧邻编译步骤）
+    - name: 记录编译开始时间
+      run: |
+        echo "COMPILE_START=$(date +%s)" >> $GITHUB_ENV
+        echo "START_TIME_DISPLAY=$(date +'%Y年%m月%d号%H时%M分')" >> $GITHUB_ENV
+       
     - name: 下载"${{matrix.target}}"源码
       working-directory: /${{ env.DIY_WORK }}
       run: |
@@ -126,21 +127,23 @@ jobs:
       if: steps.compile.outcome == 'success'
       uses: 281677160/common@uploads
 
- # 先添加一个步骤获取完成时间
-    - name: 记录完成时间
+    - name: 计算编译时长
+      if: always()  # 即使编译失败也会执行
       run: |
+        # 记录结束时间
+        echo "COMPILE_END=$(date +%s)" >> $GITHUB_ENV
         echo "FINISH_TIME=$(date +'%Y年%m月%d号%H时%M分')" >> $GITHUB_ENV
- # 这个步骤会将当前时间写入环境变量 FINISH_TIME
+        if [ ${{ env.COMPILE_END }} -ge ${{ env.COMPILE_START }} ]; then
+          DURATION=$((COMPILE_END - COMPILE_START))
+        else
+          DURATION=$(( (86400 - COMPILE_START) + COMPILE_END ))
+        fi
+        HOURS=$((DURATION / 3600))
+        MINUTES=$(( (DURATION % 3600) / 60 ))
+        SECONDS=$((DURATION % 60))
+        echo "DURATION=${HOURS}小时${MINUTES}分钟${SECONDS}秒" >> $GITHUB_ENV
 
- # 记录完成时间并计算耗时
-    - name: 记录完成时间和计算耗时
-      run: |
-        echo "FINISH_TIME_TS=$(date +%s)" >> $GITHUB_ENV
-        DURATION=$((FINISH_TIME_TS - START_TIME))
-        echo "DURATION=$(date -u -d @$DURATION +'%H小时%M分钟%S秒')" >> $GITHUB_ENV
-        echo "FINISH_TIME=$(date +'%Y年%m月%d号%H时%M分')" >> $GITHUB_ENV
-
- # 编译成功通知
+    # 4. 成功通知（使用精确计算的时长）
     - name: 编译成功通知
       if: success() && steps.compile.outcome == 'success'
       uses: emon100/Action-Serverchan@v3
@@ -151,11 +154,12 @@ jobs:
     
           📦 编译目标：【${{ env.SOURCE_CODE }}】【${{ env.FOLDER_NAME }}】【${{ env.CONFIG_FILE }}】分支的${{env.TARGET_PROFILE}}固件
           😋 仓库信息：【${{env.WAREHOUSE_MAN}}】仓库的【${{env.RUN_NUMBER}}号】
-          ⏱️ 编译耗时：${{ env.DURATION }}
+          ⏱️ 实际编译时长：${{ env.DURATION }}
+          🕒 开始时间：${{ env.START_TIME_DISPLAY }}
           🎈 完成时间：${{ env.FINISH_TIME }}
           🌴 固件编译已完成 🎈！！！
 
- # 编译失败通知
+    # 5. 失败通知（同样使用精确时长）
     - name: 编译失败通知
       if: failure() && steps.compile.outcome == 'failure'
       uses: emon100/Action-Serverchan@v3
@@ -166,7 +170,8 @@ jobs:
     
           ❌ 失败目标：【${{ env.SOURCE_CODE }}】【${{ env.FOLDER_NAME }}】【${{ env.CONFIG_FILE }}】分支的${{env.TARGET_PROFILE}}固件
           😋 仓库信息：【${{env.WAREHOUSE_MAN}}】仓库的【${{env.RUN_NUMBER}}号】
-          ⏱️ 耗时：${{ env.DURATION }}
+          ⏱️ 失败时已耗时：${{ env.DURATION }}
+          🕒 开始时间：${{ env.START_TIME_DISPLAY }}
           🎈 失败时间：${{ env.FINISH_TIME }}
           🔗 查看详情：${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           🌴 请及时排查问题 🚨！！！
