--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -127,6 +127,20 @@ jobs:
       if: steps.compile.outcome == 'success'
       uses: 281677160/common@uploads
 
+      # 在编译步骤后、计算时长前添加提取内核版本的步骤
+    - name: 提取内核版本
+      if: always()
+      run: |
+        if [ -f ".config" ]; then
+          KERNEL_VERSION=$(grep "KERNEL_PATCHVER" .config | cut -d'=' -f2)
+          echo "KERNEL_VERSION=$KERNEL_VERSION" >> $GITHUB_ENV
+        elif [ -d "build_dir/target-*/linux-*/" ]; then
+          KERNEL_VERSION=$(ls build_dir/target-*/linux-*/ | grep -oP 'linux-\K[\d.]+')
+          echo "KERNEL_VERSION=$KERNEL_VERSION" >> $GITHUB_ENV
+        else
+          echo "KERNEL_VERSION=未知" >> $GITHUB_ENV
+        fi
+
     # 修复后的计算编译时长步骤
     - name: 计算编译时长
       if: always()  # 无论成功失败都执行
@@ -154,8 +168,8 @@ jobs:
         text: 编译成功【${{matrix.target}}】
         desp: |
           🎉 主人💕：【${{matrix.target}}】文件夹编译成功！
-          
           📦 编译目标：【${{ env.SOURCE_CODE }}】【${{ env.FOLDER_NAME }}】【${{ env.CONFIG_FILE }}】分支的${{env.TARGET_PROFILE}}固件
+          🧮 内核版本：${{ env.KERNEL_VERSION }}
           😋 仓库信息：【${{env.WAREHOUSE_MAN}}】仓库的【${{env.RUN_NUMBER}}号】
           ⏱️ 实际编译时长：${{ env.DURATION }}
           🕒 开始时间：${{ env.START_TIME_DISPLAY }}
@@ -171,8 +185,8 @@ jobs:
         text: 编译失败【${{matrix.target}}】
         desp: |
           🚨 主人💕：【${{matrix.target}}】文件夹编译失败！
-    
           ❌ 失败目标：【${{ env.SOURCE_CODE }}】【${{ env.FOLDER_NAME }}】【${{ env.CONFIG_FILE }}】分支的${{env.TARGET_PROFILE}}固件
+          🧮 内核版本：${{ env.KERNEL_VERSION }}
           😋 仓库信息：【${{env.WAREHOUSE_MAN}}】仓库的【${{env.RUN_NUMBER}}号】
           ⏱️ 失败时已耗时：${{ env.DURATION }}
           🕒 开始时间：${{ env.START_TIME_DISPLAY }}
