--- a/.github/workflows/Immortalwrt.yml
+++ b/.github/workflows/Immortalwrt.yml
@@ -163,6 +163,7 @@ jobs:
         gh_token: ${{ secrets.REPO_TOKEN }}
         
     - name: 触发启动"${{ matrix.target }}"开始编译
+      id: compile  # 添加这一行，定义compile步骤ID
       if: steps.info.outcome == 'success'
       uses: 281677160/common@trigger
 
