--- a/.github/workflows/Immortalwrt.yml
+++ b/.github/workflows/Immortalwrt.yml
@@ -231,7 +231,7 @@ jobs:
   #🎈 触发时间：${{ format('{0:yyyy年MM月dd号HH时mm分}', github.event.head_commit.timestamp) }}
 
       # 4. 成功通知（使用精确计算的时长）
-    - name: 编译成功通知
+    - name: 编译成功触发通知
       if: success() && steps.compile.outcome == 'success'
       uses: emon100/Action-Serverchan@v3
       with:
