--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,7 +1,6 @@
-#
+# 
 # 编译主程序,请勿修改文件名称（compile.yml）
 #
-
 
 name: 编译主程序
 on:
@@ -52,6 +51,9 @@ jobs:
         remove_packages: "azure-cli google-cloud-cli microsoft-edge-stable google-chrome-stable firefox postgresql* temurin-* *llvm* mysql* dotnet-sdk-*"
         remove_folders: "/usr/share/swift /usr/share/miniconda /usr/share/az* /usr/share/glade* /usr/local/lib/node_modules /usr/local/share/chromium /usr/local/share/powershell"
         
+    - name: 准备结束
+      uses: actions/checkout@v4
+
     - name: Set up Go 1.26
       uses: actions/setup-go@v4
       with:
@@ -75,6 +77,8 @@ jobs:
           echo "GOMODCACHE=$(go env GOMODCACHE)"
           echo "GOCACHE=$(go env GOCACHE)"
         fi
+    - name: 准备结束
+      uses: actions/checkout@v4
 
     - name: 检测密匙/文件/版本
       uses: 281677160/common@mishi
@@ -157,19 +161,13 @@ jobs:
           KERNEL_VERSION="${{ env.LINUX_KERNEL }}"
           echo "KERNEL_VERSION=$KERNEL_VERSION" >> $GITHUB_ENV
           echo "已从环境变量 LINUX_KERNEL 提取内核版本: $KERNEL_VERSION"
-          exit 0
-        fi
-
-        # 备选：使用 patchverl 变量（日志中该值也为 6.12）
         elif [ -n "${{ env.patchverl }}" ]; then
+          # 备选：使用 patchverl 变量（日志中该值也为 6.12）
           KERNEL_VERSION="${{ env.patchverl }}"
           echo "KERNEL_VERSION=$KERNEL_VERSION" >> $GITHUB_ENV
           echo "已从环境变量 patchverl 提取内核版本: $KERNEL_VERSION"
-          exit 0
-        fi
-
-        # 兜底：若上述变量意外缺失，显示未知
         else
+          # 兜底：若上述变量意外缺失，显示未知
           echo "KERNEL_VERSION=未知" >> $GITHUB_ENV
           echo "未找到内核版本相关环境变量"
         fi
@@ -230,4 +228,3 @@ jobs:
           🎈 失败时间：${{ env.FINISH_TIME }}
           🔗 查看详情：${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           🌴 请及时排查问题 🚨！！！
-
